Remember the docked state for session management. Patch by Mathieu Seigneurin <matsei@seimat.net>, thanks!

BUG: 75673

svn path=/trunk/KDE/kdepim/; revision=951220